Trying to fix stretched mockup images on mobile devices.

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -132,6 +132,7 @@
 .mockup {
     img {
         width: 80em;
+        height: 100% !important;
         margin: 1em auto 1em auto;
     }
 }
